...

const LoginForm = props => {
  const [login, setlogin] = useState('');
  const [password, setPassword] = useState('');
  return (
    <View>
      <TextInput testID='login'
        style={[styles.input, {marginTop:20}]}
        onChangeText={setlogin}
        value={login}
        placeholder="Login"
      />
      <TextInput testID='password'
        style={[styles.input, {marginBottom:20}]}
        secureTextEntry={true}
        onChangeText={setPassword}
        value={password}
        placeholder="Password"
      />
      <Button testID='connect'
        title="Se connecter"
        onPress={() => props.onConnect(login, password)}
      />
    </View>
  );
};
...
