...
              icon='share-circle'
              title='Partager'
            />)}
          <View style={{flexDirection: 'row', justifyContent: 'space-evenly'}}>
            {props.route.params.right ? (null):(
            <ButtonWithIcon
              testID='delete'
              style='light'
              onPress={deleteTravel}
              icon='trash-can'
              title='Supprimer'
            />)}
            {props.route.params.right && props.route.params.right == "READER" ? (null):(
            <ButtonWithIcon
              testID='modify'
              style='dark'
              onPress={() => navigate("Action on a travel", {navigationTitle: 'Modifier le voyage', method: 'PUT', id: props.route.params.id, travel:travel, shared: props.route.params.right != undefined})}
              icon='pen'
              title='Modifier'
            />)}
          </View>
        </View>
        <View style={styles.sectionContainer}>
          <View style={{flexDirection: 'row', justifyContent: 'space-evenly', alignItems: 'center'}}>
            <Text style={styles.sectionTitle}>Vos activités</Text>
            {props.route.params.right && props.route.params.right == "READER" ? (null):(
              <ButtonWithIcon 
                testID='create'
                style='right'
                style_config={{marginTop:5, marginBottom:10}}
                style2='dark'
                onPress={() => navigate("Action on an activity", {navigationTitle: 'Ajouter une activité', method: 'POST', id: props.route.params.id, shared: props.route.params.right != undefined})}
                icon='pen'
                title='Ajouter'
...
