...
      ) : (
          <Stack.Navigator>
            <Stack.Screen
              name="Home"
              component={Home}
              options={({ navigation, route }) => ({
                title: 'Mon carnet de voyage',
                headerStyle: {
                  backgroundColor: '#8F2C38',
                },
                headerTintColor: '#fff',
                headerTitleStyle: {
                  fontWeight: 'bold',
...
                },
                headerTintColor: '#fff',
                headerTitleStyle: {
                  fontWeight: 'bold',
                  textAlign: 'center',
                },
                headerLeft: () => (<TouchableOpacity testID="goback" onPress={() => navigation.goBack()}>
                    <MaterialCommunityIcons style={styles.menubutton} name="arrow-left-bold-circle" color={'#DB707C'} size={26} onPress={() => navigation.navigate('Home', { screen: 'MyTravels' })}/>
                  </TouchableOpacity>
                ),
              })}
            />
            <Stack.Screen
...
